checker/tests/output/variants/ill-typed/unexpected-variant-2.stella
ERROR_UNEXPECTED_VARIANT
